--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node .",
     "start:dev": "nodemon --config nodemon.json src/index.ts",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "upgrade-packages": "npx npm-check-updates --doctor -u"
   },
   "dependencies": {
     "bunyan": "1.8.15",
@@ -22,12 +23,13 @@
     "@types/convict": "6.1.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.0.3",
-    "@types/node": "16.11.11",
+    "@types/node": "16.11.12",
     "@types/supertest": "2.0.11",
     "jest": "27.4.3",
     "nodemon": "2.0.15",
+    "npm-check-updates": "12.0.3",
     "supertest": "6.1.6",
-    "ts-jest": "27.0.7",
+    "ts-jest": "27.1.1",
     "ts-node": "10.4.0",
     "tslint": "6.1.3",
     "typescript": "4.5.2"
